force-app/main/default/objects/RE_GSAP_Staging_table__c/RE_GSAP_Staging_table__c.object-meta.xml
<CustomObject>
    <label>GSAP Staging table</label>
    <nameField>
        <displayFormat>GSAP-{0000}</displayFormat>
        <label>GSAP Staging table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSAP Staging table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>