force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>