force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Application__c.field-meta.xml
<CustomField>
    <fullName>RE_Application__c</fullName>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>