force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Division__c.field-meta.xml
<CustomField>
    <fullName>RE_Division__c</fullName>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>