force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_List_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_List_Price__c</fullName>
    <label>List Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>