force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>