force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Margin_above_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Margin_above_MC__c</fullName>
    <label>Margin above MC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>