force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_MIDday_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_MIDday_Price__c</fullName>
    <label>MIDday Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>