force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RE_Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>