force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Scale_Type__c</fullName>
    <label>Scale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>