force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Sold_To__c</fullName>
    <label>Sold To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>