force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Std_Disc__c.field-meta.xml
<CustomField>
    <fullName>RE_Std_Disc__c</fullName>
    <label>Std Disc(Tier based)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>