force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Transport_Charge__c.field-meta.xml
<CustomField>
    <fullName>RE_Transport_Charge__c</fullName>
    <label>Transport Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>