force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/RE_Valid_start_date__c.field-meta.xml
<CustomField>
    <fullName>RE_Valid_start_date__c</fullName>
    <label>Valid start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>