force-app/main/default/objects/RE_GSAP_Staging_table__c/fields/REV_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>REV_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REV Price Book</label>
    <referenceTo>RT_Price_Book__c</referenceTo>
    <relationshipLabel>GSAP Staging table</relationshipLabel>
    <relationshipName>GSAP_Staging_table</relationshipName>
    <type>Lookup</type>
</CustomField>